# backend/routes/index.js
@@ -39,6 +39,8 @@ app.use("/api-docs", swaggerUI.serve, swaggerUI.setup(swaggerJSDocs));
 app.use(express.json())
 app.use('/api/users', require('./users/users')); 
 app.use('/api/tracks', require('./tracks/tracks')); 
+app.use('/api/scripts', require('./scripts/scripts')); 
+// app.use('/api/bruh', require('./bruh/bruh')); 
 app.use('/api/playlists', require('./playlists/playlists')); 
 app.use('/api/music', require('./music/music')); 
 app.use('/api/likes', require('./likes/likes')); 
